# fekal

./: .editorconfig  LICENSE.txt  meson.build
doc/: grammar.txt
driver/: main.cpp  meson.build
example/: policies.fekal
include/fekal/: ast.hpp  checker.hpp  compiler.hpp  diagnostics.hpp  parser.hpp  peg.hpp  printer.hpp  reader.hpp  recursion_context.hpp  token.hpp
include/fekal/ast/: action.hpp  actionblock.hpp  andexpr.hpp  bitandexpr.hpp  bitorexpr.hpp  bitxorexpr.hpp  boolexpr.hpp  defaultaction.hpp  divexpr.hpp  eqexpr.hpp  expr.hpp  gteexpr.hpp  gtexpr.hpp  identifier.hpp  intexpr.hpp  intlit.hpp  lshiftexpr.hpp  lteexpr.hpp  ltexpr.hpp  mulexpr.hpp  negexpr.hpp  neqexpr.hpp  nodebase.hpp  orexpr.hpp  policy.hpp  policystatement.hpp  programstatement.hpp  rshiftexpr.hpp  subtractexpr.hpp  sumexpr.hpp  syscallfilter.hpp  usestatement.hpp
include/fekal/ast/fwd/: andexpr.hpp  bitandexpr.hpp  bitorexpr.hpp  bitxorexpr.hpp  boolexpr.hpp  divexpr.hpp  eqexpr.hpp  gteexpr.hpp  gtexpr.hpp  identifier.hpp  intexpr.hpp  intlit.hpp  lshiftexpr.hpp  lteexpr.hpp  ltexpr.hpp  mulexpr.hpp  negexpr.hpp  neqexpr.hpp  orexpr.hpp  rshiftexpr.hpp  subtractexpr.hpp  sumexpr.hpp
include/fekal/ast/impl/: andexpr.ipp  bitandexpr.ipp  bitorexpr.ipp  bitxorexpr.ipp  divexpr.ipp  eqexpr.ipp  gteexpr.ipp  gtexpr.ipp  lshiftexpr.ipp  lteexpr.ipp  ltexpr.ipp  mulexpr.ipp  negexpr.ipp  neqexpr.ipp  orexpr.ipp  rshiftexpr.ipp  subtractexpr.ipp  sumexpr.ipp
include/fekal/checker/: context.hpp  scope.hpp
include/fekal/checker/syscalls/: open.hpp
include/fekal/peg/: choice.hpp  recursion_context.hpp
src/: ast.cpp  checker.cpp  compiler.cpp  main.ypp  parser.cpp  printer.cpp  reader.ypp
test/: meson.build  test_ast.cpp
tree-sitter/: Makefile  Package.swift  grammar.js  package.json  pyproject.toml  tree-sitter.json
tree-sitter-fekal/: CMakeLists.txt  Cargo.toml  binding.gyp  go.mod  grammar.js  setup.py
tree-sitter-fekal/bindings/go/: binding.go  binding_test.go
tree-sitter-fekal/bindings/node/: binding.cc  index.js
tree-sitter-fekal/bindings/python/tests/: test_binding.py
tree-sitter-fekal/bindings/python/tree_sitter_fekal/: __init__.py  binding.c
tree-sitter-fekal/bindings/swift/TreeSitterFekal/: fekal.h
tree-sitter-fekal/queries/: highlights.scm
tree-sitter/bindings/c/: tree-sitter-fekal.pc.in
tree-sitter/bindings/rust/: lib.rs
tree-sitter/bindings/swift/TreeSitterFekalTests/: TreeSitterFekalTests.swift
tree-sitter/queries/: indents.scm
