[package]
name = "tree-sitter-fekal"
description = "Seccomp policy language"
version = "0.1.0"
authors = ["Vinícius dos Santos Oliveira <vini.ipsmaker@gmail.com>"]
license = "MIT-0"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "fekal"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://gitlab.com/emilua/fekal"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.3"
