[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-fekal"
description = "Seccomp policy language"
version = "0.1.0"
keywords = ["incremental", "parsing", "tree-sitter", "fekal"]
classifiers = [
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
authors = [{ name = "Vinícius dos Santos Oliveira", email = "vini.ipsmaker@gmail.com" }]
requires-python = ">=3.10"
license.text = "MIT-0"
readme = "README.md"

[project.urls]
Homepage = "https://gitlab.com/emilua/fekal"

[project.optional-dependencies]
core = ["tree-sitter~=0.24"]

[tool.cibuildwheel]
build = "cp310-*"
build-frontend = "build"
